snapshots/care/data4life/hc-result-sdk-kmp/error/0.1.0-SNAPSHOT/maven-metadata.xml.sha512
9115bc96af02649f34a9de7ddc0bd074957f5a98978e1107198bc2ee1c23444f35d6204a8935486934b398a4c4ed610910ee47972bcb370e46cb93ed2b5009ca